2005-09-23  Christian W. Zuckschwerdt  <zany@triq.net>

	* rewrite for multiple devices auto scanning

2005-09-15  Christian W. Zuckschwerdt  <zany@triq.net>

	* read/write flag for data buffer
	* nonblocking mode flag, blocking mode default now
	* updated to obexftp 0.10.8 and fuse 2.3

2005-06-13  Christian W. Zuckschwerdt  <zany@triq.net>

	* removed caching
	* implemented file writing support
	* updated to obexftp 0.10.3 and fuse 2.2
