@@ -1,3 +1,12 @@
+2006-06-12  Christian W. Zuckschwerdt  <zany@triq.net>
+
+	* 64-bit safe printf format (Roberto Pariset)
+
+2006-03-07  Christian W. Zuckschwerdt  <zany@triq.net>
+
+	* added usb support (Stanislav Nikolov)
+	* device/channel code cleanup
+
 2005-09-23  Christian W. Zuckschwerdt  <zany@triq.net>
 
 	* rewrite for multiple devices auto scanning
